# zed-fossil

./: Cargo.toml  README.md  extension.toml
languages/fossil/: config.toml  folds.scm  highlights.scm  indents.scm
src/: lib.rs
