[package]
name = "zed-fossil"
version = "0.1.0"
edition = "2021"
description = "Zed extension for the Fossil language"
license = "MIT"
repository = "https://github.com/angelip2303/fossil-lang"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
opt-level = "z"
